--- a/example/loks.yaml
+++ b/example/loks.yaml
@@ -1,67 +1,86 @@
 name: loks
 components:
-- name: redis
-  image: redis:latest
-  deployments:
   - name: redis
-    port: 6379
-    hostPort: 6379
+    image: redis:latest
+    deployments:
+      - name: redis
+        port: 6379
+        hostPort: 6379
 
-- name: postgresql
-  image: postgres:latest
-  env:
-    POSTGRESQL_PASSWORD: postgres
-  deployments:
   - name: postgres
-    port: 5432
-    hostPort: 5432
+    image: postgres:latest
+    env:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    deployments:
+      - name: postgres
+        port: 5432
+        hostPort: 5432
+        livenessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - postgres
+            - -d
+            - postgres
+          initialDelaySeconds: 3
+          periodSeconds: 3
 
-- name: localstack
-  image: localstack/localstack:latest
-  post_deploy_script: |
-    awslocal s3 mb s3://my-bucket
-  deployments:
   - name: localstack
-    port: 4566
-    hostPort: 4566
+    image: localstack/localstack:latest
+    post_deploy_script: |
+      aws --endpoint-url=http://localstack.default.svc.cluster.local:4566 s3 mb s3://loks   
+    deployments:
+      - name: localstack
+        port: 4566
+        hostPort: 4566
     env:
       SERVICES: s3
+      AWS_DEFAULT_REGION: us-east-1
+      AWS_ACCESS_KEY_ID: test
+      AWS_SECRET_ACCESS_KEY: test
 
-- name: backend-app
-  image: backend:latest
-  build_dev: |
-    docker build -t backend:dev .
-  pre_deploy_script:
-    sleep 5
-    echo "Migration completed"
-  env:
-    REDIS_HOST: redis
-    POSTGRESQL_HOST: postgresql
-    S3_ENDPOINT: localstack:4566
-  deployments:
   - name: backend
-    port: 5000
+    skip_pull_image: true
+    build_dev: |
+      docker build -t backend:dev .
+    pre_deploy_script: |
+      sleep 5
+      echo "Migration completed"
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/postgres
+    deployments:
+      - name: backend
+        port: 8000
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8000
+          initialDelaySeconds: 3
+          periodSeconds: 3
     dependencies:
-      - redis/redis
-      - postgres/postgres
-      - localstack/localstack
+      - redis
+      - postgres
+      - localstack
 
-- name: frontend-app
-  image: frontend:latest
-  build_dev: |
-    docker build -t frontend:dev .
-  env:
-    BACKEND_ENDPOINT: backend-app:5000
-  deployments:
   - name: frontend
-    port: 80
+    skip_pull_image: true
+    build_dev: |
+      docker build -t frontend:dev .
+    env:
+      BACKEND_ENDPOINT: backend-app:5000
+    deployments:
+      - name: frontend
+        port: 80
     dependencies:
-      - backend-app/backend
+      - backend
 
 ingress:
-- host: "localhost"
-  paths:
-  - path: "/api"
-    service: backend
-  - path: "/"
-    service: frontend
+  - host: "localhost"
+    paths:
+      - path: "/api"
+        service: backend
+      - path: "/"
+        service: frontend
